# RPI_PICO_W-W5100S-BEACON_GATEWAY_AWS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/le_scanner/: CMakeLists.txt  core1_main.c  core1_main.h  le_scanner.c
port/aws-iot-device-sdk-embedded-C/inc/: http_transport_interface.h  mqtt_transport_interface.h
port/aws-iot-device-sdk-embedded-C/src/: http_transport_interface.c
